<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_margin="8dp"
        android:id="@+id/renameLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/rename_icon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/rename_book_name"
            android:gravity="center|left"
            android:layout_marginLeft="12dp"
            android:textColor="@color/dark_grey"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="8dp"
        android:id="@+id/deleteLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/delete_icon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/delete_book"
            android:gravity="center|left"
            android:layout_marginLeft="12dp"
            android:textColor="@color/dark_grey"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="8dp"
        android:id="@+id/add_membersLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/add_member_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/add_members_to_book"
            android:gravity="center|left"
            android:layout_marginLeft="12dp"
            android:textColor="@color/dark_grey"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="8dp"
        android:id="@+id/deleteMemberLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/delete_member"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/delete_members_from_book"
            android:gravity="center|left"
            android:layout_marginLeft="12dp"
            android:textColor="@color/dark_grey"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>