<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.IntroActivity">

    <ImageView
        android:id="@+id/generalIv"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/intro_image"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/generalTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_d"
        app:layout_constraintTop_toBottomOf="@+id/generalIv"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="12dp"/>
    <Button
        android:id="@+id/signUp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/sign_up"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/generalTv"/>
    <Button
        android:id="@+id/signIn"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/sign_in"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/signUp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
